# raydeon

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: cube.rs  geom_perf.rs  triangles.rs
src/: bvh.rs  cube.rs  lib.rs  path.rs  plane.rs  ray.rs  rectprism.rs  scene.rs  shapes.rs  sphere.rs  triangle.rs
src/shapes/: mod.rs  plane.rs  rectprism.rs  sphere.rs  triangle.rs
