[package]
name = "raydeon"
version = "0.1.0"
authors = ["cbgbt <cbgbt@cabbage.bot>"]
edition = "2018"

[dependencies]
cgmath = "0.17"
collision = "0.20"
euclid = "0.22"
log = "0.4"
rayon = "1.2"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
anyhow = "1"
env_logger = "0.11"
float-cmp = "0.5"
svg = "0.18"
